22-04-2022 scripts cleanup, import multiprocessing

--- a/SparseChem_Train_Synt.ipynb
+++ b/SparseChem_Train_Synt.ipynb
@@ -77,17 +77,17 @@
     "from torch.optim.lr_scheduler import MultiStepLR\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from pytorch_memlab import MemReporter\n",
-    "import multiprocessing\n",
     "from pynvml import *\n",
     " \n",
     "pp = pprint.PrettyPrinter(indent=4)\n",
     "np.set_printoptions(edgeitems=3, infstr='inf', linewidth=150, nanstr='nan')\n",
     "torch.set_printoptions( linewidth=132)\n",
     "\n",
+    "# import multiprocessing\n",
+    "# multiprocessing.set_start_method('fork', force=True)\n",
+    "\n",
     "if torch.cuda.is_available():\n",
     "    nvmlInit()\n",
-    "\n",
-    "multiprocessing.set_start_method('fork', force=True)\n",
     "\n",
     "\n",
     "parser = argparse.ArgumentParser(description=\"Training a multi-task model.\")\n",
