--- a/SparseChem_Train_mini.ipynb
+++ b/SparseChem_Train_mini.ipynb
@@ -49,7 +49,6 @@
     "import time\n",
     "import json\n",
     "import functools\n",
-    "import multiprocessing\n",
     "import types\n",
     "import wandb\n",
     "from datetime import datetime\n",
@@ -83,7 +82,8 @@
     "# from torch.serialization import SourceChangeWarning \n",
     "#warnings.filterwarnings(\"ignore\", category=UserWarning)    \n",
     "\n",
-    "multiprocessing.set_start_method('fork', force=True)"
+    "# import multiprocessing\n",
+    "# multiprocessing.set_start_method('fork', force=True)"
    ]
   },
   {
