--- a/SparseChem_Train-Dev.ipynb
+++ b/SparseChem_Train-Dev.ipynb
@@ -6,8 +6,8 @@
    "id": "8aaf2ad3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T23:55:37.981669Z",
-     "start_time": "2022-01-03T23:55:37.954345Z"
+     "end_time": "2022-09-12T12:19:14.660254Z",
+     "start_time": "2022-09-12T12:19:14.627562Z"
     }
    },
    "outputs": [
@@ -37,8 +37,8 @@
    "id": "d02f52c3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T23:55:39.082205Z",
-     "start_time": "2022-01-03T23:55:39.071257Z"
+     "end_time": "2022-09-12T12:19:14.991230Z",
+     "start_time": "2022-09-12T12:19:14.976687Z"
     }
    },
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/kbardool/kusanagi/SparseChemDev/examples/chembl', '/home/kbardool/miniconda3/envs/pyt-gpu/lib/python39.zip', '/home/kbardool/miniconda3/envs/pyt-gpu/lib/python3.9', '/home/kbardool/miniconda3/envs/pyt-gpu/lib/python3.9/lib-dynload', '', '/home/kbardool/miniconda3/envs/pyt-gpu/lib/python3.9/site-packages', '/home/kbardool/miniconda3/envs/pyt-gpu/lib/python3.9/site-packages/IPython/extensions', '/home/kbardool/.ipython', '../..']\n"
+      "['/home/kevin/WSL-projs/SparseChem', '/home/kevin/miniconda3/envs/pyt-gpu/lib/python39.zip', '/home/kevin/miniconda3/envs/pyt-gpu/lib/python3.9', '/home/kevin/miniconda3/envs/pyt-gpu/lib/python3.9/lib-dynload', '', '/home/kevin/miniconda3/envs/pyt-gpu/lib/python3.9/site-packages', '/home/kevin/miniconda3/envs/pyt-gpu/lib/python3.9/site-packages/IPython/extensions', '/home/kevin/.ipython', '../..']\n"
      ]
     }
    ],
@@ -63,11 +63,23 @@
    "id": "a67f3c6e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T23:55:41.045788Z",
-     "start_time": "2022-01-03T23:55:40.014776Z"
+     "end_time": "2022-09-12T12:19:29.812760Z",
+     "start_time": "2022-09-12T12:19:16.042620Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'test_train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1068759/1725241560.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequest\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0murlretrieve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtest_train\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom_str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'test_train'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -93,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "759088b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T23:55:41.070474Z",
-     "start_time": "2022-01-03T23:55:41.048393Z"
+     "end_time": "2022-09-12T12:19:29.814550Z",
+     "start_time": "2022-09-12T12:19:29.814534Z"
     }
    },
    "outputs": [],
@@ -121,25 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e5248d2e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-03T23:55:42.121723Z",
-     "start_time": "2022-01-03T23:55:42.099817Z"
+     "end_time": "2022-09-12T12:19:29.816302Z",
+     "start_time": "2022-09-12T12:19:29.816285Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Call test_classification with dev: cpu , data_dir: test_chembl23 \n",
-      "\n",
-      "Output dir : ./test_chembl23/models-qrwhyyahcbvi/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dev = \"cpu\"\n",
     "data_dir=\"test_chembl23\"\n",
@@ -4430,7 +4432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
